[cs-ui] CSLookup - ensured scroll bar visibility on small number of records, added readOnly prop and aditional fixes
Additional fixes:
-background-color on loading node
-loading prop set to client mode props

--- a/cs-ui-components/src/sass/_theme.scss
+++ b/cs-ui-components/src/sass/_theme.scss
@@ -436,6 +436,7 @@ $variables: (
 	--cs-lookup-results-header-c: $cs-gray-medium-1,
 	--cs-lookup-results-row-c: $cs-gray-dark-1,
 	--cs-lookup-dropdown-msg-c: $cs-gray-medium-2,
+	--cs-lookup-dropdown-msg-bg: $cs-white,
 	--cs-lookup-dropdown-msg-inverse-bg: $cs-gray-light-7,
 	--cs-lookup-dropdown-msg-inverse-br: $cs-gray-light-2,
 	--cs-lookup-dropdown-msg-inverse-c: $cs-gray-dark-5,
