--- a/cs-ui-components/src/sass/components/_cs-lookup.scss
+++ b/cs-ui-components/src/sass/components/_cs-lookup.scss
@@ -83,6 +83,7 @@
 						align-items: center;
 						padding: 0.5rem;
 						pointer-events: none;
+						@include sbg(--cs-lookup-dropdown-msg-bg);
 						.cs-lookup-dropdown-msg-text {
 							font-size: 0.8125rem;
 							margin-left: 0.5rem;
